[1] Move to Java 17
Bug: https://github.com/eclipse-ecoretools/ecoretools/issues/1
Signed-off-by: Pierre-Charles David <pierre-charles.david@obeo.fr>